--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -41,6 +41,12 @@
       <artifactId>jniloader</artifactId>
       <version>1.1</version>
     </dependency>
+    <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-compress</artifactId>
+    <version>1.21</version> <!-- Use the latest version available -->
+    </dependency>
+
     
   </dependencies>
 
